--- a/src/app/modules/main/content/components/admin/child-components/system-configurations/projects-configuration/projects-configuration.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/system-configurations/projects-configuration/projects-configuration.component.html
@@ -47,7 +47,7 @@
                 <input type="text" matInput placeholder="Add Project Type" #projectStatusInput formControlName="projectStatus" >
             </mat-form-field>
 
-            <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigStatusLoader" [disabled]="projectStatusInput.value === '' " (click)="addProjectConfigType()">+ Add</button>
+            <button mat-flat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigStatusLoader" [disabled]="projectStatusInput.value === '' " (click)="addProjectConfigStatus()">+ Add</button>
             <div class="flex items-center" *ngIf="projectConfigStatusLoader">
                 <mat-spinner [diameter]="20"></mat-spinner>
                 <span class="ml-2">Adding...</span>
@@ -58,7 +58,7 @@
             <div class="w-full flex justify-between items-center py-1 px-3 border-b border-gray-200" *ngFor="let status of projectConfig.status">
                 <div class="w-6/12">{{status.value}}</div>
                 <div class="w-auto flex items-center">
-                    <button mat-icon-button color="warn" class="!ml-3" [disabled]="status.isMandatory" (click)="navigationActions(status, 'status')">
+                    <button mat-icon-button color="warn" class="!ml-3" (click)="navigationActions(status, 'status')">
                         <mat-icon>remove_circle_outline</mat-icon>
                     </button>
                 </div>
@@ -72,7 +72,7 @@
         <div class="text-gray-500 text-xs">Sets maximum number of members to be mapped to a single project.</div>
 
         <div class="flex mt-6 items-center">
-            <div class="text-gray-700">Maximum : <span class="font-bold text-green-600">{{projectConfig?.membersLimit}}</span> </div>
+            <div class="text-gray-600">Maximum : <span class="font-bold text-green-700 text-lg">{{projectConfig?.membersLimit}}</span> </div>
             <button mat-icon-button class="!ml-4" [matTooltip]="!enableMembersLimitEditForm ? 'Edit' : 'Undo Edit'" (click)="enableMembersLimitEditForm = !enableMembersLimitEditForm;">
                 <mat-icon class="text-sm hover:text-blue-600">{{ !enableMembersLimitEditForm ? 'edit' : 'close'}}</mat-icon>
             </button>
@@ -83,7 +83,7 @@
                 <input type="number" matInput placeholder="" #projectMembersLimitInput formControlName="projectMembersLimit" >
             </mat-form-field>
 
-            <button mat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigMembersLimitLoader" [disabled]="projectMembersLimitInput.value === '' " (click)="addProjectConfigType()">Update</button>
+            <button mat-button color="primary" class="!-mt-5 !ml-3" *ngIf="!projectConfigMembersLimitLoader" [disabled]="projectMembersLimitInput.value === '' " (click)="updateProjectConfigMembersLimit()">Update</button>
             <div class="flex items-center" *ngIf="projectConfigMembersLimitLoader">
                 <mat-spinner [diameter]="20"></mat-spinner>
                 <span class="ml-2">Updating...</span>
