--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -19,9 +19,9 @@
             <div class="w-full mt-4">
                 <div class="w-full flex justify-between items-center p-3 border-b border-gray-100 hover:bg-gray-50" *ngFor="let release of releaseItems">
                     <div class="">
-                        <div class=" text-gray-800">{{release.title}}</div>
-                        <div class="text-gray-400 text-xs py-2">{{release.tag}}</div>
-                        <div class="text-gray-400 text-xs">{{release.domain}}</div>
+                        <div class="text-base text-gray-700">{{release.title}}</div>
+                        <div class="text-gray-600 text-xs py-2">Tag: <span class="text-blue-600 cursor-pointer hover:underline">{{release.tag}}</span></div>
+                        <div class="text-gray-600 text-xs">Production URL: <span class="text-blue-600 cursor-pointer hover:underline">{{release.domain}}</span></div>
                     </div>
                     <div class="flex content-center">
                         <div class="">
