--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -1,5 +1,5 @@
 <div class="w-full px-4">
-    <div class="w-full my-2 p-4">
+    <div class="w-full my-2 p-4" *ngIf="releaseDetails">
         <!-- Back to releases list Navigation-->
         <div class="" style="width: fit-content">
             <a class=""  [routerLink]="['../']">
@@ -14,7 +14,7 @@
             <!-- Title -->
             <div class="w-full flex justify-between items-center">
                 <div class="">
-                    <span class="cursor-pointer text-blue-600">Client Name > Project Bazaar</span>
+                    <span class="cursor-pointer text-blue-600">{{filterRequiredIds('client', releaseDetails.clientId)}} > Project Name</span>
                     <div class="text-2xl text-gray-700 flex items-center">Release Version 1.0</div>
                 </div>
                 <div class="flex">
@@ -22,8 +22,8 @@
                         {{tempStatusValue}} <mat-icon class="cursor-pointer bg-white rounded-full ml-3">arrow_drop_down</mat-icon>
                     </div>
                     <mat-menu #matStatusMenu="matMenu">
-                        <div class="" *ngFor="let status of statusListMenu.list">
-                            <div class="text-xs p-3 hover:bg-gray-100 cursor-pointer hover:font-bold hover:text-blue-800" (click)="tempStatusValue = status;">{{status}}</div>
+                        <div class="" *ngFor="let status of releaseConfigDetails.status">
+                            <div class="text-xs p-3 hover:bg-gray-100 cursor-pointer hover:font-bold hover:text-blue-800" (click)="tempStatusValue = status.value;">{{status.value}}</div>
                         </div>
                     </mat-menu>
                     <div class="ml-4">
@@ -171,28 +171,36 @@
                         <div class="w-full mt-6">
                             <div class="flex justify-between mt-4">
                                 <span class="">Client</span>
-                                <span class="text-gray-500">Client Name</span>
+                                <span class="text-gray-500">{{filterRequiredIds('client', releaseDetails.clientId)}}</span>
                             </div>
                             <div class="flex justify-between mt-4">
                                 <span class="">Target Release</span>
-                                <span class="text-gray-500">Platform</span>
+                                <span class="text-gray-500">{{filterRequiredIds('target', releaseDetails.releaseTargetId)}}</span>
                             </div>
                             <div class="flex justify-between mt-4">
                                 <span class="">Release Type</span>
-                                <span class=""><span class="px-3 bg-gray-50 border border-gray-200 rounded-full text-xs ml-2 italic">Patch</span></span>
+                                <span class=""><span class="px-3 bg-gray-50 border border-gray-200 rounded-full text-xs ml-2 font-bold text-gray-700">{{filterRequiredIds('type', releaseDetails.releaseTypeId)}}</span></span>
                             </div>
                             <div class="flex justify-between mt-4">
                                 <span class="">Release Date</span>
-                                <span class="text-gray-500">31st March 2023</span>
+                                <span class="text-gray-500">{{releaseDetails.releaseClosingDate | date}}</span>
                             </div>
                             <div class="flex justify-between mt-4">
                                 <span class="">Release Owner</span>
-                                <span class="text-gray-500">Sagar Desai</span>
+                                <span class="text-gray-500">{{filterRequiredIds('owner', releaseDetails.releaseOwnerId)}}</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Loader -->
+    <div class="w-full flex justify-center py-28" *ngIf="!releaseDetails">
+        <div class="flex items-center">
+            <mat-spinner [diameter]="20"></mat-spinner>
+            <span class="ml-2">Loading Release details. Please Wait ...</span>
         </div>
     </div>
 </div>
